added ids to elements

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,4 @@
-.sidebar {
+/* .sidebar {
   width: 250px;
   position: fixed;
   top: 0;
@@ -13,4 +13,4 @@
     padding-right: 40px;
     padding-left: 220px; /* 180 + 40 */
   }
-}
+} */
